[metadata]
name = pingpi
maintainer = Landung Setiawan
maintainer_email = landung.setiawan@gmail.com
description = A Ping API Upload and Read
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cormorack/python-project-template
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
author = Landung Setiawan
author_email = landung.setiawan@gmail.com
platforms = OS Independent

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    requests
    pandas
    fastapi
    uvicorn
    python-multipart
python_requires = >=3.7
setup_requires =
    setuptools_scm

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-flake8
    pytest-xdist
    pytest-mock
docs =
    sphinx
    sphinx-automodapi
all =
    %(test)s
    %(docs)s
